Buttons not appearing for some rows fixed
Known issues: past "Additional Translations", the button placement is messed up. Toggle copy button takes 2 clicks to work instead of 1. Some definition elements appear when they should be hidden.

--- a/src/pageStyles.css
+++ b/src/pageStyles.css
@@ -15,17 +15,17 @@
   border: 3;
   border-color: white;
   color: white;
-  padding: 7px 15px;
+  padding: 1px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 5px;
   font-family: Cabin
 }
-button2:hover {
+.button2:hover {
   background-color: #6E67E5;
   color: white;
 }
-button2:active {
+.button2:active {
 	background-color: #393577;
 }
